# ND_CAFMaker

./: .gitmodules  CAF.C  CAF.h  CHANGELOG.md  CMakeLists.txt  Makefile  PackageConfig.cmake.in  Params.h  README.md  build.sh  build_deps.sh  build_eff.sh  caf_setup_July.sh  cafmakersand.fcl  dumpTree.py  efficiency_pe.cpp  launch_ndcafmaker_campaign.py  launch_ndcafmaker_campaign_220620.cfg  launch_ndcafmaker_campaign_example.cfg  makeCAF  makeCAF.cxx  ndcaf_setup.sh  ndcaf_setup_deps.sh  pack.sh  run_everything.sh
.github/workflows/: ci.yml
cfg/: NDCAFMaker.fcl  ndcafmakerjob.fcl  ndcafmakerjob_LAr_TMS_Dump_GHEP.fcl  ndcafmakerjob_LAr_TMS_GHEP.fcl  pandora.fcl
cmake/: FindUPSPackage.cmake
libTG4Event/: TG4Event.h  TG4HitSegment.h  TG4PrimaryParticle.h  TG4PrimaryVertex.h  TG4Trajectory.h  TG4TrajectoryPoint.h  libTG4EventLinkDef.h  libTG4EventProjectDict.cxx  libTG4EventProjectDict_rdict.pcm  libTG4EventProjectSource.cxx  setup.sh
nusyst_inputs/V00_02/EbLepMomShift/: EbInputs.root
nusyst_inputs/V00_02/FSILikeEAvailShift/: nu_1pi.root  nu_2p2h.root  nu_CCQE.root  nu_MpiDIS.root  nubar_1pi.root  nubar_2p2h.root  nubar_CCQE.root  nubar_MpiDIS.root
nusyst_inputs/V00_02/MKInputs/: MKOverGENIERSRes_1GeV.root  MKOverGENIERSRes_2GeV.root  MKOverGENIERSRes_3GeV.root
reco/: IRecoBranchFiller.h  ParameterizedRecoBranchFiller.cxx
scripts/: diff_cafs  diff_cafs_uproot  h5_to_cpp.py  validate_caf_truth.py
sim_inputs/: GNuMIFlux.xml  copy_dune_ndtf_flux  dune-nd.mac  larcv.cfg
spack/: README.md
src/: CAF.cxx  CAF.h  CMakeLists.txt  Makefile  Params.h  dumpTree.cxx  dumpTree.h  fwd.h  makeCAF.C  struct.h  testHDF.C
src/beam/: IFBeam.cxx  IFBeam.h
src/reco/: DLP_h5_classes.cxx  DLP_h5_classes.h  IRecoBranchFiller.h  MINERvARecoBranchFiller.cxx  MINERvARecoBranchFiller.h  MLNDLArRecoBranchFiller.cxx  MLNDLArRecoBranchFiller.h  NDGArRecoBranchFiller.cxx  NDGArRecoBranchFiller.h  NDLArDLPH5DatasetReader.cxx  NDLArDLPH5DatasetReader.h  NDLArMINERvAMatchRecoFiller.cxx  NDLArMINERvAMatchRecoFiller.h  NDLArProductFiller.cxx  NDLArProductFiller.h  NDLArSummaryH5.cxx  NDLArSummaryH5.h  NDLArSummaryH5DatasetReader.cxx  NDLArSummaryH5DatasetReader.h  NDLArTMSMatchRecoFiller.cxx  NDLArTMSMatchRecoFiller.h  NDLArTMSUniqueMatchRecoFiller.cxx  NDLArTMSUniqueMatchRecoFiller.h  PandoraLArRecoNDBranchFiller.cxx  PandoraLArRecoNDBranchFiller.h  ParameterizedRecoBranchFiller.cxx  ParameterizedRecoBranchFiller.h  SANDEvt.cxx  SANDEvt.h  SANDRecoBranchFiller.cxx  SANDRecoBranchFiller.h  TMSRecoBranchFiller.cxx  TMSRecoBranchFiller.h
src/reco/readH5/: BufferView.h  DatasetBuffer.cxx  DatasetBuffer.h  H5DataView.cxx  H5DataView.h  IH5Viewer.cxx  IH5Viewer.h
src/truth/: FillTruth.cxx  FillTruth.h  FillTruthForSAND.cxx  FillTruthForSAND.h
src/util/: FloatMath.cxx  FloatMath.h  GENIEBannerBypass.cxx  GENIEQuiet.cxx  GENIEQuiet.h  IFBeamUtils.cxx  IFBeamUtils.h  Loggable.cxx  Loggable.h  Logger.cxx  Logger.h  Progress.cxx  Progress.h
